--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+
 pluginManagement {
     repositories {
         google()
@@ -12,5 +13,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Code Vault"
+rootProject.name = "Crypto"
 include ':app'
